# DELTA-AI-main

./: .gitignore  AGENTS.md  COMPLETE_GUIDE.md  GUIDE.md  PROJECT_ANALYSIS.md  README.md  fullCommandEXEC.txt  pyproject.toml  runonWindows.md
Data/: README.md
configs/: benchmark.yaml  benchmark_100k_shortlist.yaml  benchmark_10k.yaml  benchmark_20k.yaml  benchmark_20k_round2.yaml  benchmark_full.yaml  benchmark_smoke.yaml  default.yaml
delta_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ml/: __init__.py  audit.py  benchmark.py  build_dataset.py  build_embeddings.py  build_retrieval.py  calibration.py  class_balance.py  data.py  encoders.py  features.py  finetune.py  labels.py  losses.py  metrics.py  model_registry.py  report.py  seed.py  settings.py  teacher.py  teacher_parity.py  train.py  viz.py
released_models/: README.md
released_models/logreg_tfidf_valuechar_effective_tuned/: metrics.json  test_predictions.npz  validation_predictions.npz
reports/: final_benchmark_protocol.md  imbalance_strategy.md  model_suitability_2026-04-09.md
results/: README.md  dataset_manifest_20k.json
results/benchmark_20k/: aggregate.csv  (+2 more)
scripts/: kaggle_setup.py  metricsCollector.js  run_benchmark_100k_shortlist.ps1  run_benchmark_10k.ps1  run_benchmark_20k.ps1  run_benchmark_20k.sh  run_benchmark_20k_round2.ps1  run_benchmark_20k_round2.sh  run_full_benchmark.ps1  run_smoke_benchmark.ps1  severityClassifier.js  train_all.py  train_all_models.ps1  train_all_models.sh  train_best_logreg.ps1  train_best_logreg.sh  train_best_securebert.ps1  train_best_securebert.sh
(+3 files in other folders)
